--- a/nfcTutorial/package.json
+++ b/nfcTutorial/package.json
@@ -10,10 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.1",
     "react": "17.0.2",
     "react-native": "0.68.0",
     "react-native-nfc-manager": "^3.13.2",
-    "react-navigation": "^4.4.4"
+    "react-native-safe-area-context": "^4.2.4",
+    "react-native-screens": "^3.13.1"
   },
   "devDependencies": {
     "@babel/core": "7.17.8",
