--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
+    "lottie-react-native": "^5.1.3",
     "react": "17.0.2",
     "react-native": "0.68.0",
     "react-native-nfc-manager": "^3.13.2",
