--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lottie-react-native": "^5.1.3",
     "react": "17.0.2",
     "react-native": "0.68.0",
+    "react-native-modal": "^13.0.1",
     "react-native-nfc-manager": "^3.13.2",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
