NFC manager works perfectly

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,6 +83,7 @@ project.ext.react = [
 
 apply from: "../../node_modules/react-native/react.gradle"
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
+apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -261,6 +262,9 @@ dependencies {
     implementation project(':react-native-vector-icons')
     
     implementation project(':lottie-react-native')
+
+    implementation project(':react-native-config')
+
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.fbjni'
