--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
+    "axios": "^0.27.2",
+    "formik": "^2.2.9",
+    "json-server": "^0.17.0",
     "lottie-react-native": "^5.1.3",
     "react": "17.0.2",
     "react-native": "0.68.0",
+    "react-native-config": "^1.4.5",
     "react-native-modal": "^13.0.1",
     "react-native-nfc-manager": "^3.13.2",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
-    "react-native-vector-icons": "^9.1.0"
+    "react-native-vector-icons": "^9.1.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "7.17.8",
