--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-API_URL=http://10.0.0.2:3000/products
+API_LOGIN=https://my-json-server.typicode.com/sevimozsoy/patikaRn/users
+API_LOGIN_FAKE_API=https://fakestoreapi.com/auth/login
+API_USERS=https://fakestoreapi.com/users
