--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-firebase/app": "^14.11.0",
+    "@react-native-firebase/auth": "^14.11.0",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
-    "json-server": "^0.17.0",
     "lottie-react-native": "^5.1.3",
     "react": "17.0.2",
     "react-native": "0.68.0",
     "react-native-config": "^1.4.5",
+    "react-native-flash-message": "^0.2.1",
     "react-native-modal": "^13.0.1",
     "react-native-nfc-manager": "^3.13.2",
     "react-native-safe-area-context": "^4.2.4",
