--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -260,6 +260,8 @@ dependencies {
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
+    implementation "androidx.core:core-splashscreen:1.0.0-beta01"
+
     implementation project(':react-native-vector-icons')
     
     implementation project(':lottie-react-native')
